--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Resume & Contact</a></li>
                 </ul>
+                <div class="mobile-menu-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </nav>
     </header>
