--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,13 @@
                     <div class="pdf-section">
                         <div class="pdf-viewer">
                             <embed src="MINH BAO LE RESUME.pdf" type="application/pdf" width="100%" height="800px" />
+                            <div class="mobile-pdf-message">
+                                PDF preview not supported on mobile devices
+                            </div>
+                            <div class="mobile-pdf-buttons">
+                                <a href="MINH BAO LE RESUME.pdf" class="btn btn-download" download>Download PDF</a>
+                                <a href="MINH BAO LE RESUME.pdf" class="btn btn-open" target="_blank">Open in New Tab</a>
+                            </div>
                         </div>
                     </div>
                 </div>
