--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,12 @@
                     </div>
 
                     <div class="pdf-section">
-                        <div class="pdf-viewer">
+                        <div class="pdf-zoom-controls">
+                            <button class="zoom-btn" onclick="zoomOut()" id="zoom-out">Zoom Out</button>
+                            <button class="zoom-btn" onclick="fitToWidth()" id="fit-width">Fit to Width</button>
+                            <button class="zoom-btn" onclick="zoomIn()" id="zoom-in">Zoom In</button>
+                        </div>
+                        <div class="pdf-viewer" id="pdf-viewer">
                             <object data="MINH BAO LE RESUME.pdf" type="application/pdf" width="100%" height="800px">
                                 <iframe src="MINH BAO LE RESUME.pdf" width="100%" height="800px">
                                     <p>Your browser does not support PDF viewing. <a href="MINH BAO LE RESUME.pdf" target="_blank">Click here to open the PDF</a></p>
