--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p class="hero-subtitle">Mechanical Engineering Student & Stamps Scholar</p>
                     <p class="hero-description">Hi! My name is Minh Bao Le. I'm currently a Stamps Scholar at UConn pursuing a major in Mechanical Engineering. My interests lie in manufacturing devices, mechatronics, and interdisciplinary engineering projects that combine mechanical design with computing innovation.</p>
                     <div class="hero-buttons">
-                        <a href="work-experience.html" class="btn btn-primary">View my Work</a>
+                        <a href="work-experience.html" class="btn btn-primary">View my Work Experience</a>
                         <a href="contact.html" class="btn btn-secondary">Get In Touch</a>
                     </div>
                 </div>
