--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,9 @@
 
                 <div class="projects-grid">
                     <div class="project-card">
+                        <div class="project-image">
+                            <img src="robot_arm.jpg" alt="Planar 3-link Robot Arm" class="project-img">
+                        </div>
                         <h3>Planar 3-link Robot Arm</h3>
                         <p>Designed and built a 3-joint robotic arm with complete kinematics implementation and real-time position control. Integrated mechanical design with advanced control algorithms.</p>
                         <div class="project-links">
@@ -54,6 +57,9 @@
                     </div>
 
                     <div class="project-card">
+                        <div class="project-image">
+                            <img src="melty_brain.jpg" alt="UConn FROST Robotics Combat Robot" class="project-img">
+                        </div>
                         <h3>UConn FROST Robotics - Combat Robot</h3>
                         <p>Collaborative robotics project focused on combat robot design and manufacturing for competitive robotics leagues.</p>
                         <div class="project-links">
