--- a/projects.html
+++ b/projects.html
@@ -32,11 +32,11 @@
 
                 <div class="projects-grid">
                     <div class="project-card">
+                        <div class="project-image-top">
+                            <img src="robot_arm.jpg" alt="Planar 3-link Robot Arm" class="project-img-top">
+                        </div>
                         <h3>Planar 3-link Robot Arm</h3>
                         <p>Designed and built a 3-joint robotic arm with complete kinematics implementation and real-time position control. Integrated mechanical design with advanced control algorithms.</p>
-                        <div class="project-links">
-                            <a href="#" class="project-link">Documentation</a>
-                        </div>
                         <div class="project-tech">
                             <span class="tech-tag">SolidWorks</span>
                             <span class="tech-tag">MATLAB</span>
@@ -56,9 +56,6 @@
                     <div class="project-card">
                         <h3>UConn FROST Robotics - Combat Robot</h3>
                         <p>Collaborative robotics project focused on combat robot design and manufacturing for competitive robotics leagues.</p>
-                        <div class="project-links">
-                            <a href="#" class="project-link">Team Page</a>
-                        </div>
                         <div class="project-tech">
                             <span class="tech-tag">Fusion360</span>
                             <span class="tech-tag">Arduino</span>
