--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-image-top">
-                            <img src="robot_arm.jpg" alt="Planar 3-link Robot Arm" class="project-img-top">
+                            <img src="robot_arm (1).jpg" alt="Planar 3-link Robot Arm" class="project-img-top">
                         </div>
                         <h3>Planar 3-link Robot Arm</h3>
                         <p>Designed and built a 3-joint robotic arm with complete kinematics implementation and real-time position control. Integrated mechanical design with advanced control algorithms.</p>
