--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,9 @@
                     </div>
 
                     <div class="project-card">
+                        <div class="project-image-top">
+                            <img src="melty_brain (1).jpg" alt="UConn FROST Robotics Combat Robot" class="project-img-top">
+                        </div>
                         <h3>UConn FROST Robotics - Combat Robot</h3>
                         <p>Collaborative robotics project focused on combat robot design and manufacturing for competitive robotics leagues.</p>
                         <div class="project-tech">
