--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-image-top">
-                            <img src="robot_arm (1).jpg" alt="Planar 3-link Robot Arm" class="project-img-top">
+                            <img src="robot_arm.jpg" alt="Planar 3-link Robot Arm" class="project-img-top">
                         </div>
                         <h3>Planar 3-link Robot Arm</h3>
                         <p>Designed and built a 3-joint robotic arm with complete kinematics implementation and real-time position control. Integrated mechanical design with advanced control algorithms.</p>
@@ -55,7 +55,7 @@
 
                     <div class="project-card">
                         <div class="project-image-top">
-                            <img src="melty_brain (1).jpg" alt="UConn FROST Robotics Combat Robot" class="project-img-top">
+                            <img src="melty_brain.jpg" alt="UConn FROST Robotics Combat Robot" class="project-img-top">
                         </div>
                         <h3>UConn FROST Robotics - Combat Robot</h3>
                         <p>Collaborative robotics project focused on combat robot design and manufacturing for competitive robotics leagues.</p>
