--- a/work-experience.html
+++ b/work-experience.html
@@ -30,32 +30,109 @@
             <div class="container">
                 <h1 class="page-title">Work Experience</h1>
 
-                <div class="timeline">
+                <div class="timeline-container">
                     <div class="timeline-item">
-                        <div class="timeline-date">May 2025 - Aug 2025</div>
-                        <div class="timeline-content">
-                            <h3>STEM Education Assistant</h3>
-                            <h4>UConn Vergnano Institute for Inclusion</h4>
-                            <p>Mentored students in marine engineering and robotics, delivering hands-on engineering education programs.</p>
-                            <ul class="achievement-list">
-                                <li>Mentored and oversaw 22 students in designing, building, and testing 11 functional underwater ROVs with 100% completion rate and 90% functional rate</li>
-                                <li>Instructed students in marine engineering concepts in SolidWorks and ROV simulator: frame design, motor placement, controller schematics, and camera integration</li>
-                                <li>Designed and delivered hands-on engineering activities for 80 high school students across 6+ engineering disciplines including mechanical, computer science, electrical, and biomedical</li>
-                            </ul>
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content-box">
+                            <div class="job-header">
+                                <h3 class="job-title">Teaching Assistant</h3>
+                                <div class="job-meta">
+                                    <span class="company">UConn Department of Engineering</span>
+                                    <span class="location">Storrs, CT</span>
+                                    <span class="dates">Aug 2025 - Present</span>
+                                    <span class="job-type">PART-TIME</span>
+                                </div>
+                            </div>
+
+                            <p class="job-description">Lead review sessions and office hours for Discrete Systems and AI4ALL courses, focusing on logic, set theory, combinatorics in engineering contexts, and ethical AI use.</p>
+
+                            <div class="achievements">
+                                <h4>Key Achievements:</h4>
+                                <ul>
+                                    <li>Head review sessions on logic, set theory, and combinatorics with engineering focus</li>
+                                    <li>Instruct students in ethical use of AI regarding future technologies</li>
+                                    <li>Conduct office hours to support student learning and comprehension</li>
+                                    <li>Develop educational materials for engineering mathematics concepts</li>
+                                </ul>
+                            </div>
+
+                            <div class="technologies">
+                                <h4>Technologies Used:</h4>
+                                <div class="tech-tags">
+                                    <span class="tech-tag">Logic Theory</span>
+                                    <span class="tech-tag">Set Theory</span>
+                                    <span class="tech-tag">Combinatorics</span>
+                                    <span class="tech-tag">AI Ethics</span>
+                                    <span class="tech-tag">Educational Technology</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
                     <div class="timeline-item">
-                        <div class="timeline-date">May 2023 - July 2023</div>
-                        <div class="timeline-content">
-                            <h3>Intern</h3>
-                            <h4>Dong Anh Electrical Equipment Corporation JSC</h4>
-                            <p>Gained hands-on experience in electrical equipment manufacturing and quality control processes in Ho Chi Minh, Vietnam.</p>
-                            <ul class="achievement-list">
-                                <li>Analyzed electrical transformer blueprints in AutoCAD to assess mechanical and electrical components</li>
-                                <li>Evaluated equipment assembly processes and testing procedures for efficiency optimization opportunities</li>
-                                <li>Conducted quality control inspections on electrical components ensuring industry and safety compliance</li>
-                            </ul>
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content-box">
+                            <div class="job-header">
+                                <h3 class="job-title">Undergraduate Research Assistant</h3>
+                                <div class="job-meta">
+                                    <span class="company">Connecticut Transportation Institute</span>
+                                    <span class="location">Storrs, CT</span>
+                                    <span class="dates">Jun 2025 - Aug 2025</span>
+                                    <span class="job-type">RESEARCH</span>
+                                </div>
+                            </div>
+
+                            <p class="job-description">Conduct long-term research on infrastructure monitoring using Arduino, Raspberry Pi, and scheduler programming. Design and maintain remote IoT networks with AWS backend.</p>
+
+                            <div class="achievements">
+                                <h4>Key Achievements:</h4>
+                                <ul>
+                                    <li>Design and maintain remote IoT network with AWS backend integration</li>
+                                    <li>Implement 6TiSCH local wireless communication protocols</li>
+                                    <li>Contribute to publications on intelligent sensing systems</li>
+                                    <li>Develop IoT sensor networks for real-time data collection</li>
+                                </ul>
+                            </div>
+
+                            <div class="technologies">
+                                <h4>Technologies Used:</h4>
+                                <div class="tech-tags">
+                                    <span class="tech-tag">Arduino</span>
+                                    <span class="tech-tag">Raspberry Pi</span>
+                                    <span class="tech-tag">AWS</span>
+                                    <span class="tech-tag">6TiSCH</span>
+                                    <span class="tech-tag">IoT</span>
+                                    <span class="tech-tag">Python</span>
+                                    <span class="tech-tag">Sensor Networks</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content-box">
+                            <div class="job-header">
+                                <h3 class="job-title">Shift Supervisor</h3>
+                                <div class="job-meta">
+                                    <span class="company">UConn Quantitative Learning Center</span>
+                                    <span class="location">Storrs, CT</span>
+                                    <span class="dates">Sep 2024 - Present</span>
+                                    <span class="job-type">PART-TIME</span>
+                                </div>
+                            </div>
+
+                            <p class="job-description">Manage a team of 20 tutors, distributing manpower to necessary tasks and supporting undergraduate students in calculus, physics, and computer science.</p>
+
+                            <div class="achievements">
+                                <h4>Key Achievements:</h4>
+                                <ul>
+                                    <li>Manage team of 20 tutors for optimal resource distribution</li>
+                                    <li>Provide 1-on-1 and group tutoring sessions in STEM subjects</li>
+                                    <li>Identify concepts where students need improvement</li>
+                                    <li>Maintain comprehensive logs to quantify complex topics</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
