README.md commit

--- a/projects.html
+++ b/projects.html
@@ -72,6 +72,27 @@
                             </ul>
                         </div>
                     </div>
+
+                    <div class="project-card">
+                        <div class="project-image-top">
+                            <img src="rov.jpg" alt="UConn Explore Engineering 2025 Underwater Robot" class="project-img-top">
+                        </div>
+                        <h3>UConn Explore Engineering 2025 Underwater Robot</h3>
+                        <p>Mentored highschool students in designing, building, and controlling an underwater robot to simulate picking up litter in the ocean.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Leadership</span>
+                            <span class="tech-tag">Soldering</span>
+                            <span class="tech-tag">Communications</span>
+                            <span class="tech-tag">3D CAD</span>
+                        </div>
+                        <div class="project-details">
+                            <ul class="project-achievements">
+                                <li>Mentored a team of high school students in designing, building, and testing a functional underwater ROV, providing guidance in mechanical design, buoyancy control, and waterproofing considerations.</li>
+                                <li>Developed and delivered STEM workshops on underwater robotics, introducing students to fundamentals of hydrodynamics, control systems, and real-world engineering problem-solving.</li>
+                                <li>Led students through hands-on integration of electronics and thruster systems, teaching safe soldering practices, circuit layout, and troubleshooting techniques.</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
