--- a/projects.html
+++ b/projects.html
@@ -72,8 +72,11 @@
                             </ul>
                         </div>
                     </div>
+                </div>
 
-                    <div class="project-card">
+                <!-- Featured ROV Project - Centered -->
+                <div class="rov-section">
+                    <div class="project-card rov-project">
                         <div class="project-image-top">
                             <img src="rov.jpg" alt="UConn Explore Engineering 2025 Underwater Robot" class="project-img-top">
                         </div>
