--- a/projects.html
+++ b/projects.html
@@ -90,9 +90,9 @@
                         </div>
                         <div class="project-details">
                             <ul class="project-achievements">
-                                <li>Mentored a team of high school students in designing, building, and testing a functional underwater ROV, providing guidance in mechanical design, buoyancy control, and waterproofing considerations.</li>
-                                <li>Developed and delivered STEM workshops on underwater robotics, introducing students to fundamentals of hydrodynamics, control systems, and real-world engineering problem-solving.</li>
-                                <li>Led students through hands-on integration of electronics and thruster systems, teaching safe soldering practices, circuit layout, and troubleshooting techniques.</li>
+                                <li>Mentored high school students in designing, building, and controlling a functional remoted controlled underwater robots.</li>
+                                <li>Developed and delivered STEM workshops on underwater robotics by introducing students to real-world engineering problem-solving.</li>
+                                <li>Led students through hands-on integration of electronics and thruster systems, teaching soldering practices and product assembling techniques.</li>
                             </ul>
                         </div>
                     </div>
