--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
                             <img src="rov.jpg" alt="UConn Explore Engineering 2025 Underwater Robot" class="project-img-top">
                         </div>
                         <h3>UConn Explore Engineering 2025 Underwater Robot</h3>
-                        <p>Mentored highschool students in designing, building, and controlling an underwater robot to simulate picking up litter in the ocean.</p>
+                        <p>Mentored highschool students in designing, building, and controlling an underwater robot to simulate real-life engineering problem solving.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Leadership</span>
                             <span class="tech-tag">Soldering</span>
